# ai-devcrew-caspio

./: README.md  index.html  package-lock.json  package.json  vite.config.js
devcrew/: README.md  package-lock.json  pyproject.toml
devcrew/src/devcrew/: architecture.md  component_tree.json  crew.py  deployment_log.md  main.py  test_report.md
devcrew/src/devcrew/src/components/: Authentication.jsx  DarkModeToggle.jsx  Search.jsx
public/: service-worker.js
src/: App.jsx
