[project]
name = "devcrew"
version = "0.1.0"
description = "devcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0"
]

[project.scripts]
devcrew = "devcrew.main:run"
run_crew = "devcrew.main:run"
train = "devcrew.main:train"
replay = "devcrew.main:replay"
test = "devcrew.main:test"
run_with_trigger = "devcrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
